[gd_scene load_steps=21 format=3 uid="uid://cee12bto8qsua"]

[ext_resource type="Script" path="res://scripts/combat.gd" id="1_5fjro"]
[ext_resource type="Texture2D" uid="uid://b8fabkydvdqry" path="res://assets/combat/combat_frame.png" id="2_6qdto"]
[ext_resource type="FontFile" uid="uid://b5lqlis8c3a4k" path="res://assets/I-pixel-u.ttf" id="3_xqqe6"]
[ext_resource type="Texture2D" uid="uid://co1plrjdjp3mh" path="res://assets/combat/combat_buttons/run.png" id="4_0ak0y"]
[ext_resource type="Texture2D" uid="uid://bft2hrwsc408i" path="res://assets/combat/combat_buttons/run_hover.png" id="5_tdtmc"]
[ext_resource type="Texture2D" uid="uid://y7hoiefh43ed" path="res://assets/combat/combat_buttons/items.png" id="6_k4tlg"]
[ext_resource type="Texture2D" uid="uid://dl7www1p1c22y" path="res://assets/combat/combat_buttons/fight.png" id="6_p7dgb"]
[ext_resource type="Texture2D" uid="uid://dbfqbaed4lnbx" path="res://assets/combat/combat_buttons/fight_hover.png" id="7_h40jt"]
[ext_resource type="Texture2D" uid="uid://crud48yia660j" path="res://assets/combat/combat_buttons/items_hover.png" id="7_un8uj"]
[ext_resource type="PackedScene" uid="uid://c1s8mfal8dbj3" path="res://assets/audio/sound.tscn" id="9_m10k8"]
[ext_resource type="AudioStream" uid="uid://vixrae60piee" path="res://assets/audio/old_man_blips/ringsuf.mp3" id="10_6t5dc"]
[ext_resource type="Texture2D" uid="uid://crkdkhpy0yrss" path="res://assets/large_frame.png" id="12_rxb6p"]

[sub_resource type="AtlasTexture" id="AtlasTexture_xwg25"]
atlas = ExtResource("2_6qdto")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_seqem"]
atlas = ExtResource("2_6qdto")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_afoxk"]
atlas = ExtResource("2_6qdto")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_dhr7j"]
atlas = ExtResource("2_6qdto")
region = Rect2(96, 0, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_bdyli"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_xwg25")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_seqem")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_afoxk")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_dhr7j")
}],
"loop": true,
"name": &"default",
"speed": 4.0
}]

[sub_resource type="LabelSettings" id="LabelSettings_yq4wf"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_swxnq"]
bg_color = Color(1, 0.0909422, 0.0594648, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_efuuh"]
bg_color = Color(1, 1, 0, 1)

[node name="Combat" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_5fjro")

[node name="Combat" type="CanvasLayer" parent="."]
visible = false

[node name="ColorRect" type="ColorRect" parent="Combat"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.31092, 6.52894e-05, 0.310918, 1)

[node name="Enemy" type="Sprite2D" parent="Combat"]
position = Vector2(575, 236)
scale = Vector2(6, 6)

[node name="CombatFrame" type="AnimatedSprite2D" parent="Combat"]
position = Vector2(574, 236)
scale = Vector2(9, 9)
sprite_frames = SubResource("SpriteFrames_bdyli")
autoplay = "default"

[node name="You" type="Label" parent="Combat"]
modulate = Color(0.996078, 1, 0, 1)
self_modulate = Color(1, 1, 0.32549, 1)
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -67.0
offset_top = 166.0
offset_right = 39.0
offset_bottom = 192.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(4, 4)
theme_override_fonts/font = ExtResource("3_xqqe6")
text = "YOU
"
label_settings = SubResource("LabelSettings_yq4wf")

[node name="EnemyBar" type="ProgressBar" parent="Combat"]
offset_left = 382.0
offset_top = 21.0
offset_right = 778.0
offset_bottom = 66.0
theme_override_font_sizes/font_size = 25
theme_override_styles/background = SubResource("StyleBoxFlat_swxnq")
theme_override_styles/fill = SubResource("StyleBoxFlat_efuuh")
step = 1.0
value = 50.0
show_percentage = false

[node name="Label" type="Label" parent="Combat/EnemyBar"]
modulate = Color(0.428719, 0.000127354, 0.428716, 1)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -98.0
offset_top = -20.5
offset_right = 8.0
offset_bottom = 5.5
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(2, 2)
theme_override_fonts/font = ExtResource("3_xqqe6")
text = "HP: 50/100
"
label_settings = SubResource("LabelSettings_yq4wf")

[node name="PlayerBar" type="ProgressBar" parent="Combat"]
offset_left = 375.0
offset_top = 585.0
offset_right = 771.0
offset_bottom = 630.0
theme_override_font_sizes/font_size = 25
theme_override_styles/background = SubResource("StyleBoxFlat_swxnq")
theme_override_styles/fill = SubResource("StyleBoxFlat_efuuh")
max_value = 25.0
step = 1.0
value = 25.0
show_percentage = false

[node name="Label" type="Label" parent="Combat/PlayerBar"]
modulate = Color(0.428719, 0.000127354, 0.428716, 1)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -102.0
offset_top = -20.5
offset_right = 4.0
offset_bottom = 5.5
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(2, 2)
theme_override_fonts/font = ExtResource("3_xqqe6")
text = "HP: 25/25
"
label_settings = SubResource("LabelSettings_yq4wf")

[node name="FightButton" type="TextureButton" parent="Combat"]
offset_left = 108.0
offset_top = 415.0
offset_right = 172.0
offset_bottom = 455.0
scale = Vector2(4, 4)
texture_normal = ExtResource("6_p7dgb")
texture_hover = ExtResource("7_h40jt")

[node name="ItemsButton" type="TextureButton" parent="Combat"]
offset_left = 802.0
offset_top = 419.0
offset_right = 866.0
offset_bottom = 459.0
scale = Vector2(4, 4)
texture_normal = ExtResource("6_k4tlg")
texture_hover = ExtResource("7_un8uj")

[node name="RunButton" type="TextureButton" parent="Combat"]
offset_left = 513.0
offset_top = 416.0
offset_right = 577.0
offset_bottom = 456.0
scale = Vector2(2, 2)
texture_normal = ExtResource("4_0ak0y")
texture_hover = ExtResource("5_tdtmc")

[node name="CombatSound" parent="Combat" instance=ExtResource("9_m10k8")]
stream = ExtResource("10_6t5dc")

[node name="ItemsLayer" type="CanvasLayer" parent="Combat"]
visible = false

[node name="ColorRect" type="ColorRect" parent="Combat/ItemsLayer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 89.0
offset_top = 84.0
offset_right = -79.0
offset_bottom = -82.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 1)

[node name="FrameKozetsuBigger" type="Sprite2D" parent="Combat/ItemsLayer"]
position = Vector2(581.5, 327.432)
scale = Vector2(3.94, 3.864)
texture = ExtResource("12_rxb6p")

[node name="first" type="TextureButton" parent="Combat/ItemsLayer"]
offset_left = 168.0
offset_top = 126.0
offset_right = 232.0
offset_bottom = 166.0
scale = Vector2(3, 3)
mouse_filter = 1
disabled = true

[node name="second" type="TextureButton" parent="Combat/ItemsLayer"]
offset_left = 375.0
offset_top = 126.0
offset_right = 439.0
offset_bottom = 166.0
scale = Vector2(3, 3)
disabled = true

[node name="third" type="TextureButton" parent="Combat/ItemsLayer"]
offset_left = 582.0
offset_top = 126.0
offset_right = 646.0
offset_bottom = 166.0
scale = Vector2(3, 3)
disabled = true

[node name="fourth" type="TextureButton" parent="Combat/ItemsLayer"]
offset_left = 791.0
offset_top = 125.0
offset_right = 855.0
offset_bottom = 165.0
scale = Vector2(3, 3)
disabled = true

[node name="fifth" type="TextureButton" parent="Combat/ItemsLayer"]
offset_left = 170.0
offset_top = 273.0
offset_right = 234.0
offset_bottom = 313.0
scale = Vector2(3, 3)
mouse_filter = 1
disabled = true

[node name="sixth" type="TextureButton" parent="Combat/ItemsLayer"]
offset_left = 377.0
offset_top = 273.0
offset_right = 441.0
offset_bottom = 313.0
scale = Vector2(3, 3)
disabled = true

[node name="seventh" type="TextureButton" parent="Combat/ItemsLayer"]
offset_left = 584.0
offset_top = 273.0
offset_right = 648.0
offset_bottom = 313.0
scale = Vector2(3, 3)
disabled = true

[node name="eighth" type="TextureButton" parent="Combat/ItemsLayer"]
offset_left = 793.0
offset_top = 272.0
offset_right = 857.0
offset_bottom = 312.0
scale = Vector2(3, 3)
disabled = true

[node name="ninth" type="TextureButton" parent="Combat/ItemsLayer"]
offset_left = 172.0
offset_top = 430.0
offset_right = 236.0
offset_bottom = 470.0
scale = Vector2(3, 3)
mouse_filter = 1
disabled = true

[node name="tenth" type="TextureButton" parent="Combat/ItemsLayer"]
offset_left = 379.0
offset_top = 430.0
offset_right = 443.0
offset_bottom = 470.0
scale = Vector2(3, 3)
disabled = true

[node name="eleventh" type="TextureButton" parent="Combat/ItemsLayer"]
offset_left = 586.0
offset_top = 430.0
offset_right = 650.0
offset_bottom = 470.0
scale = Vector2(3, 3)
disabled = true

[node name="twelfth" type="TextureButton" parent="Combat/ItemsLayer"]
offset_left = 795.0
offset_top = 429.0
offset_right = 859.0
offset_bottom = 469.0
scale = Vector2(3, 3)
disabled = true

[connection signal="pressed" from="Combat/FightButton" to="." method="_on_fight_button_pressed"]
[connection signal="pressed" from="Combat/ItemsButton" to="." method="_on_items_button_pressed"]
[connection signal="pressed" from="Combat/RunButton" to="." method="_on_run_button_pressed"]
[connection signal="pressed" from="Combat/ItemsLayer/first" to="." method="_on_first_pressed"]
[connection signal="pressed" from="Combat/ItemsLayer/second" to="." method="_on_second_pressed"]
[connection signal="pressed" from="Combat/ItemsLayer/third" to="." method="_on_third_pressed"]
[connection signal="pressed" from="Combat/ItemsLayer/fourth" to="." method="_on_fourth_pressed"]
[connection signal="pressed" from="Combat/ItemsLayer/fifth" to="." method="_on_fifth_pressed"]
[connection signal="pressed" from="Combat/ItemsLayer/sixth" to="." method="_on_sixth_pressed"]
[connection signal="pressed" from="Combat/ItemsLayer/seventh" to="." method="_on_seventh_pressed"]
[connection signal="pressed" from="Combat/ItemsLayer/eighth" to="." method="_on_eighth_pressed"]
[connection signal="pressed" from="Combat/ItemsLayer/ninth" to="." method="_on_ninth_pressed"]
[connection signal="pressed" from="Combat/ItemsLayer/tenth" to="." method="_on_tenth_pressed"]
[connection signal="pressed" from="Combat/ItemsLayer/eleventh" to="." method="_on_eleventh_pressed"]
[connection signal="pressed" from="Combat/ItemsLayer/twelfth" to="." method="_on_twelfth_pressed"]
